syntax = "proto3";

package cheetah.auth.cookie.external;
option csharp_namespace = "Cheetah.Auth.Cookie.External";

import public "auth.cerberus.types.proto";

service Cookie {
  /*
    Регистрация пользователя по cookie
   */
  rpc Register(RegistryRequest) returns (RegistryResponse);
  /*
    Вход пользователя по cookie
   */
  rpc Login(LoginRequest) returns (LoginResponse);
}

message RegistryRequest {
  string device_id = 1;
}

message RegistryResponse {
  cheetah.auth.cerberus.types.Tokens tokens = 1;
  string cookie = 2;
}

message LoginRequest {
  string cookie = 1;
  string device_id = 2;
}
message LoginResponse {
  cheetah.auth.cerberus.types.Tokens tokens = 1;
  Status status = 2;
  enum Status {
    OK = 0;
    NOT_FOUND = 1;
    LINKED = 2;
  }
}


